# div0

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  Dockerfile.ci-debug  Makefile  NOTICE  README.md  main.cpp  qodana.yaml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
.semgrep/: c23.yaml
benchmarks/: CMakeLists.txt  bench.h  stack_bench.c  uint256_bench.c
benchmarks/crypto/: keccak256_bench.cpp  secp256k1_bench.cpp
benchmarks/ethereum/: bloom_bench.cpp
benchmarks/evm/: opcode_arithmetic_bench.cpp  opcode_comparison_bench.cpp  opcode_memory_bench.cpp  opcode_stack_bench.cpp
benchmarks/rlp/: rlp_bench.cpp
benchmarks/types/: uint256_arithmetic_bench.cpp  uint256_bitwise_bench.cpp  uint256_comparison_bench.cpp  uint256_shift_bench.cpp  uint256_utility_bench.cpp
cmake/: CompilerWarnings.cmake  Dependencies.cmake  Sanitizers.cmake
cmake/dependencies/: Benchmark.cmake  CLI11.cmake  GTest.cmake  STC.cmake  Unity.cmake  XKCP.cmake  argparse.cmake  compiler-rt.cmake  libbacktrace.cmake  picolibc.cmake  secp256k1.cmake  simdjson.cmake  spdlog.cmake  yyjson.cmake
cmake/toolchains/: riscv64-freestanding.cmake  riscv64-picolibc.cmake
docs/: arena-allocator.md  core_dumps.md  merkle-patricia-trie.md  world-state.md
fuzz/: CMakeLists.txt  README.md  evm_fuzzer.cpp
include/div0/: div0.h
include/div0/crypto/: keccak256.h  secp256k1.h
include/div0/db/: database.h  memory_database.h
include/div0/ethereum/: account.h  bloom.h  eip1559.h  receipt.h  roots.h  storage_slot.h  storage_value.h
include/div0/evm/: block_context.h  call_frame.h  call_frame_pool.h  call_op.h  call_params.h  evm.h  execution_env.h  execution_environment.h  execution_result.h  forks.h  frame_result.h  gas.h  log.h  log_vec.h  memory.h  memory_pool.h  opcodes.h  stack.h  stack_pool.h  status.h  streaming_tracer.h  tracer.h  tracer_config.h  tx_context.h
include/div0/executor/: block_executor.h
include/div0/json/: json.h  parse.h  write.h
include/div0/log/: log.h
include/div0/mem/: arena.h  stc_allocator.h
include/div0/rlp/: decode.h  encode.h  helpers.h  rlp.h
include/div0/state/: account.h  account_provider.h  code_provider.h  memory_account_provider.h  memory_code_provider.h  memory_storage_provider.h  snapshot.h  state_access.h  state_context.h  storage_provider.h  world_state.h
include/div0/t8n/: alloc.h  env.h  result.h  txs.h
include/div0/trie/: hex_prefix.h  mpt.h  nibbles.h  node.h
include/div0/types/: address.h  bytes.h  bytes32.h  hash.h  storage_slot.h  storage_value.h  uint256.h
include/div0/util/: hex.h
include/div0/utils/: bytes.h  hex.h
scripts/: llvm-gcov.sh
src/cli/: crash_handler.c  crash_handler.cpp  crash_handler.h  exit_codes.h  main.c  main.cpp  version.h.in
src/cli/t8n/: executor.cpp  executor.h  fork_parser.h  (+9 more)
src/crypto/: keccak256.c  keccak256.cpp  secp256k1.c  secp256k1.cpp
src/db/: memory_database.cpp
src/ethereum/: account.cpp  bloom.cpp  eip1559.cpp  receipt.cpp  roots.cpp  storage_slot.cpp
src/evm/: call_op.c  evm.c  evm.cpp  jumpdest.h  log_vec.c  memory.c  memory.cpp  opcodes.h  streaming_tracer.cpp
src/executor/: address.c  block_executor.c  intrinsic_gas.c  validation.c
src/json/: parse.c  write.c
src/mem/: arena.c
src/rlp/: README.md  decode.c  decode.cpp  encode.c  encode.cpp  helpers.c
src/state/: account.c  memory_account_provider.cpp  memory_storage_provider.cpp  world_state.c
src/t8n/: alloc.c  env.c  result.c  txs.c
src/trie/: hex_prefix.c  hex_prefix.cpp  mpt.c  mpt.cpp  mpt_memory.c  nibbles.c  nibbles.cpp  node.c  node.cpp
src/types/: address.c  bytes.c  bytes32.c  hash.c  hash.cpp  uint256.c  uint256_divmod.cpp  uint256_exp.cpp  uint256_modular.cpp  uint256_signed.cpp
src/util/: hex.c
src/utils/: hex.cpp
tests/: CMakeLists.txt  qemu_riscv64.c  test_div0.c
tests/crypto/: test_keccak256.c  test_keccak256.h  test_secp256k1.c  test_secp256k1.h
tests/ethereum/transaction/: test_transaction.c  test_transaction.h
tests/evm/: test_evm.c  test_evm.h  test_opcodes_arithmetic.c  test_opcodes_arithmetic.h  test_opcodes_bitwise.c  test_opcodes_bitwise.h  test_opcodes_comparison.c  test_opcodes_comparison.h  test_opcodes_context.c  test_opcodes_context.h  test_opcodes_logging.c  test_opcodes_logging.h  test_opcodes_stack.c  test_opcodes_stack.h  test_stack.c  test_stack.h  test_stack_pool.c  test_stack_pool.h
tests/executor/: test_block_executor.c  test_block_executor.h
tests/integration/: evm_call_test.cpp  evm_execution_test.cpp
tests/json/: test_json.c  test_json.h
tests/mem/: test_arena.c  test_arena.h
tests/rlp/: test_rlp.c  test_rlp.h
tests/state/: test_account.c  test_account.h  test_world_state.c  test_world_state.h
tests/t8n/: test_t8n.c  test_t8n.h
tests/trie/: test_hex_prefix.c  test_hex_prefix.h  test_mpt.c  test_mpt.h  test_nibbles.c  test_nibbles.h  test_node.c  test_node.h
tests/types/: test_address.c  test_address.h  test_bytes.c  test_bytes.h  test_bytes32.c  test_bytes32.h  test_hash.c  test_hash.h  test_uint256.c  test_uint256.h
tests/unit/cli/: t8n_command_test.cpp
tests/unit/crypto/: keccak256_test.cpp  secp256k1_test.cpp
tests/unit/ethereum/: bloom_test.cpp  eip1559_test.cpp  receipt_test.cpp  roots_test.cpp  transaction_json_test.cpp  transaction_rlp_test.cpp
tests/unit/evm/: memory_test.cpp  stack_test.cpp
tests/unit/evm/opcodes/: opcode_arithmetic_test.cpp  opcode_bitwise_test.cpp  opcode_comparison_test.cpp  opcode_context_test.cpp  opcode_dup_test.cpp  opcode_keccak256_test.cpp  opcode_memory_test.cpp  opcode_stack_test.cpp  opcode_storage_test.cpp  opcode_swap_test.cpp
tests/unit/rlp/: rlp_test.cpp
tests/unit/state/: memory_account_provider_test.cpp
tests/unit/trie/: hex_prefix_test.cpp  mpt_test.cpp  nibbles_test.cpp
tests/unit/types/: uint256_arithmetic_test.cpp  uint256_bitwise_test.cpp  uint256_comparison_test.cpp  uint256_division_test.cpp  uint256_modular_test.cpp  uint256_shift_test.cpp  uint256_signed_test.cpp  uint256_utility_test.cpp
tests/util/: test_hex.c  test_hex.h
(+49 files in other folders)
